--- a/app/templates/bookingDetail.html
+++ b/app/templates/bookingDetail.html
@@ -475,7 +475,7 @@
                 <div class="row">
                     <div class="col-md-4 image-container">
                         <img
-                            src="https://res.cloudinary.com/devtqlbho/image/upload/v1733842675/4_qrekt5.webp"
+                            src="{{hotel['comments']['comment1']['img']}}"
                             alt="image user">
                     </div>
                     <div class="col-md-8">
