--- a/app/templates/bookingDetail.html
+++ b/app/templates/bookingDetail.html
@@ -470,29 +470,30 @@
 
     <!-- bình luận của khách hàng  -->
     <div class="container">
-        <div class="row d-flex align-items-center">
+        {% for i in range(6) %}
+        <div class="row d-flex align-items-center mt-3 p-3" style="border-bottom: 1px solid #cfd8e8;">
             <div class="col-md-3">
                 <div class="row">
                     <div class="col-md-4 image-container">
                         <img
-                            src="{{hotel['comments']['comment1']['img']}}"
+                            src="{{hotel['comments']['comment' + i|string]['img']}}"
                             alt="image user">
                     </div>
                     <div class="col-md-8">
                         <div
-                            class="name">{{hotel['comments']['comment1']['name']}}</div>
+                            class="name">{{hotel['comments']['comment' + i|string]['name']}}</div>
                         <div
-                            class="date">{{hotel['comments']['comment1']['birthday']}}</div>
+                            class="date">{{hotel['comments']['comment' + i|string]['birthday']}}</div>
                         <div class="details">
                             <span>🛏
-                                {{hotel['comments']['comment1']['info1']}}</span>
+                                {{hotel['comments']['comment' + i|string]['info1']}}</span>
                             <span>📅
-                                {{hotel['comments']['comment1']['info2']}}</span>
+                                {{hotel['comments']['comment' + i|string]['info2']}}</span>
                             <span><i class="fa-solid fa-person"
                                     style="color: #FFD43B;"></i> <i
                                     class="fa-solid fa-person"
                                     style="color: #74C0FC;"></i>
-                                {{hotel['comments']['comment1']['Room-type']}}</span>
+                                {{hotel['comments']['comment' + i|string]['Room-type']}}</span>
                         </div>
                     </div>
                 </div>
@@ -500,11 +501,11 @@
             <div class="col-md-9">
                 <h4>Trải Nghiệm Đáng Nhớ Tại Oasia Hotel</h4>
                 <div class="rating">
-                    <span class="rating-score">{{hotel['comments']['comment1']['Evaluate1']}}</span>
-                    <span class="rating-text">{{hotel['comments']['comment1']['Evaluate2']}}</span>
+                    <span class="rating-score">{{hotel['comments']['comment' + i|string]['Evaluate1']}}</span>
+                    <span class="rating-text">{{hotel['comments']['comment' + i|string]['Evaluate2']}}</span>
                 </div>
                 <p>
-                    {{hotel['comments']['comment1']['comment']}}
+                    {{hotel['comments']['comment' + i|string]['comment']}}
                 </p>
                 <div class="feedback useful-information">
                     <i class="fa-solid fa-thumbs-up like-comment"></i> Thích
@@ -513,6 +514,7 @@
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
     <!-- end bình luận của khách hàng -->
 </div>
