--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -15,9 +15,7 @@
                         <div class="dropdown mb-2 ">
                             <label for="location-dropdown" class="form-label title-color"><i
                                     class="fa-solid fa-city" style="color: #63E6BE;"></i>
-                                Thành phố,
-                                vị trí hoặc khách sạn
-                                name:</label>
+                                Tên Phòng: </label>
                             <input
                                 id="location-dropdown"
                                 type="text"
