--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -74,8 +74,7 @@
             <div class="dropdown mb-2 ">
                 <label for="location-dropdown" class="form-label title-color"><i
                         class="fa-solid fa-city" style="color: #63E6BE;"></i>
-                    Thành phố,
-                    vị trí hoặc tên khách sạn   :</label>
+                    Tên Phòng: </label>
                 <input
                     id="location-dropdown"
                     type="text"
@@ -87,9 +86,7 @@
                     <!-- phần này để đổ dữ liệu từ database vào -->
                     <li><a class="dropdown-item" href="#">Quận 1</a></li>
                     <li><a class="dropdown-item" href="#">Đà Nẵng</a></li>
-                    <li><a class="dropdown-item" href="#">Link 3</a></li>
-                    <li><a class="dropdown-item" href="#">Thành phố Vũng
-                            Tàu</a></li>
+                    <li><a class="dropdown-item" href="#">Thành phố Vũng Tàu</a></li>
                     <li><a class="dropdown-item">Nha Trang</a></li>
                 </ul>
             </div>
