--- a/app/templates/admin/statistics.html
+++ b/app/templates/admin/statistics.html
@@ -1,106 +1,75 @@
+<link rel="stylesheet" href="{{ url_for('static', filename='css/revenue.css') }}">
+<link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+<script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 {% extends '/admin/base.html' %}
 
 {% block body %}
 <h1 class="text-center text-danger mt-1">Thống kê báo cáo</h1>
 
+<div class="container mt-5 mb-5">
+      <div class="row justify-content-center">
+            <div class="col-md-4">
+                  <div class="input-group">
+                        <span class="input-group-text">Year</span>
+                        <select class="form-select" id="yearSelector">
+                              <option selected>Select Year</option>
+                        </select>
+                  </div>
+            </div>
+      </div>
+</div>
+
 <div class="container">
 
-      <!-- Biểu đồ Doanh Thu Hàng Tháng -->
+      <!-- Biểu đồ Doanh Thu Hàng Tháng  -->
       <div class="row">
             <div class="col-md-6 col-12">
                   <canvas id="doanhThuChart" width="400" height="200"></canvas>
             </div>
+      <!-- Biểu đồ tần xuất sử dụng phòng -->
             <div class="col-md-6 col-12">
                   <canvas id="tanSuatChart" width="400" height="200"></canvas>
             </div>
 
       </div>
+</div>
 
-      <!-- Biểu đồ Tần Suất Sử Dụng Phòng -->
-
+<div class="container">
       <!-- Chi Tiết Báo Cáo -->
-      <h3>Chi Tiết Báo</h3>
-      <table border="1" style="width:50%; text-align:center;">
-            <tr>
-                  <th>Năm báo cáo</th>
-                  <th>Tổng doanh thu</th>
-                  <th>Tổng số phòng sử dụng</th>
-            </tr>
-            <tr>
-                  <td>2024</td>
-                  <td>{{ '{:,}'.format(tong_doanh_thu) }} VNĐ</td>
-                  <td>{{ so_phong_su_dung }} phòng</td>
-            </tr>
-      </table>
-
-      <!-- Nút Chức Năng -->
+      <h3 class="mt-5">Chi Tiết Báo</h3>
       <div>
-            <button style="background-color:red; color:white;">Thoát</button>
-            <button style="background-color:purple; color:white;">Báo cáo doanh
-                  thu</button>
-            <button style="background-color:purple; color:white;">Báo cáo mật
-                  độ</button>
-            <button style="background-color:green; color:white;">Xuất báo
-                  cáo</button>
+            <table class="statistic-table" style="width:100%; text-align:center;">
+                  <tr>
+                        <th>Năm báo cáo</th>
+                        <th>Tổng doanh thu</th>
+                        <th>Tổng số phòng sử dụng</th>
+                  </tr>
+                  <tr>
+                        <td>2024</td>
+                        <td>{{ '{:,}'.format(tong_doanh_thu) }} VNĐ</td>
+                        <td>{{ so_phong_su_dung }} phòng</td>
+                  </tr>
+            </table>
+      
+      </div>
+      <!-- Nút Chức Năng -->
+      <div class="row mb-5">
+            <div class="col-md-6"></div>
+            <div class="col-md-6 function-selection d-flex justify-content-between">
+                  <button type="button" class="btn btn-danger"><a href="#">Thoát</a></button>
+                  <button type="button" class="btn btn-info"><a href="{{ url_for('revenue_report') }}">Báo cáo doanh thu</a></button>
+                  <button type="button" class="btn btn-info"><a href="{{ url_for('density_report') }}">Báo cáo mật độ</a></button>
+                  <button type="button" class="btn btn-success"><a href="#">Xuất báo cáo</a></button>
+            </div>
       </div>
 </div>
 
+<script src="{{ url_for('static', filename='js/calendarYear.js') }}"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-      window.onload = function() {
-            const doanhThuData = {
-                  labels: ['T1', 'T2', 'T3', 'T4', 'T5', 'T6', 'T7', 'T8', 'T9', 'T10', 'T11', 'T12'],
-                  datasets: [
-                        {
-                              label: 'Doanh Thu (VNĐ)',
-                              data: 8000000000 ,
-                              backgroundColor: 'rgba(153, 102, 255, 0.6)',
-                              borderColor: 'rgba(153, 102, 255, 1)',
-                              borderWidth: 1
-
-                        }
-                  ]
-            }
-            const tanSuatData = {
-                  labels: ['T1', 'T2', 'T3', 'T4', 'T5', 'T6', 'T7', 'T8', 'T9', 'T10', 'T11', 'T12'],
-                  datasets: [
-                        {
-                              label: 'Phòng Thường',
-                              data: 90000,
-                              backgroundColor: 'rgba(54, 162, 235, 0.6)'
-                        },
-                        {
-                              label: 'Phòng VIP',
-                              data: 78000,
-                              backgroundColor: 'rgba(255, 206, 86, 0.6)'
-                        }
-                  ]
-            }
-      }
-      // Biểu đồ Doanh Thu
-      new Chart(document.getElementById('doanhThuChart'), {
-            type: 'bar',
-            data: doanhThuData,
-            options: {
-                  responsive: true,
-                  plugins: {
-                        legend: { display: true },
-                        title: { display: true, text: 'Biểu đồ Doanh Thu Hàng Tháng' }
-                  }
-            }
-      });
-
-      // Biểu đồ Tần Suất Sử Dụng Phòng
-      new Chart(document.getElementById('tanSuatChart'), {
-            type: 'bar',
-            data: tanSuatData,
-            options: {
-            responsive: true,
-            plugins: {
-                  legend: { display: true },
-                  title: { display: true, text: 'Biểu đồ Tần Suất Sử Dụng Phòng' }
-                  }
-            }
-      });      
-</script>
+<script src="{{ url_for('static', filename='js/statistics.js') }}"></script>
 {% endblock %}
