--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -3,6 +3,8 @@
 {% block title %}Booking{% endblock %}
 {% block js %}
 <script src="{{ url_for('static', filename='js/checkOutDate.js') }}"></script>
+<script src="{{url_for('static', filename='js/booking.js')}}"></script>
+
 {% endblock %}
 
 {% block content %}
