--- a/app/templates/admin/statistics.html
+++ b/app/templates/admin/statistics.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ url_for('static', filename='css/revenue.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/stats.css') }}">
 <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet"
@@ -61,10 +61,10 @@
       <div class="row mb-5">
             <div class="col-md-6"></div>
             <div class="col-md-6 function-selection d-flex justify-content-between">
-                  <button type="button" class="btn btn-danger"><a href="#">Thoát</a></button>
+                  <button type="button" class="btn btn-danger"><a href="{{ url_for('admin.index') }}">Thoát</a></button>
                   <button type="button" class="btn btn-info"><a href="{{ url_for('revenue_report') }}">Báo cáo doanh thu</a></button>
                   <button type="button" class="btn btn-info"><a href="{{ url_for('density_report') }}">Báo cáo mật độ</a></button>
-                  <button type="button" class="btn btn-success"><a href="#">Xuất báo cáo</a></button>
+                  <button type="button" class="btn btn-success" id="export-btn"><a href="#">Xuất báo cáo</a></button>
             </div>
       </div>
 </div>
@@ -72,4 +72,6 @@
 <script src="{{ url_for('static', filename='js/calendarYear.js') }}"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="{{ url_for('static', filename='js/statistics.js') }}"></script>
+      <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+      <script src="{{ url_for('static', filename='js/export.js') }}"></script>
 {% endblock %}
