--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -38,8 +38,8 @@
       <input required type="password" onblur="EventCheckConfirm(this)" class="form-control" id="confirm" placeholder="Enter confirm" name="confirm">
     </div>
     <div class="mb-3">
-      <label for="file" class="form-label">Avatar:</label>
-      <input required type="file" class="form-control" id="file" name="avatar">
+      <label for="avatar" class="form-label">Avatar:</label>
+      <input required type="file" class="form-control" id="avatar" name="avatar">
     </div>
     <button type="submit" class="btn btn-danger">Đăng kí</button>
   </form>
