--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -53,10 +53,10 @@
                                 <div class="col-md-3 text-center">
                                     <p class="title-color"> <i class="fa-solid fa-person" style="color: #f5600f;"></i>
                                         Số lượng khách</p>
-                                    <select class="form-select" name="number-customer">
-                                        <option>2</option>
-                                        <option>1</option>
-                                        <option>3</option>
+                                    <select class="form-select" id="number-customer" name="number-customer">
+                                        <option value="2">2</option>
+                                        <option value="1">1</option>
+                                        <option value="3">3</option>
                                     </select>
                                 </div>
 
@@ -73,7 +73,7 @@
 
                                 <div class="col-md-6 text-center">
                                     <p class="mb-0"><br></p>
-                                    <button type="button" onclick="get_room()" id="search" class="btn col-md-6"
+                                    <button type="button" id="search" class="btn col-md-6"
                                         style="background-color:#ff5e1e; color:antiquewhite">
                                         <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i>
                                         Tìm phòng
