--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -14,6 +14,8 @@
     {% block js %}{% endblock %}
     {% block css %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment-with-locales.min.js"></script>
 </head>
 <body>
     
