--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -68,6 +68,83 @@
 <!--w3school end Carousel -->
 <!-- end thanh tìm kiếm -->
 
+<div class="">
+    <div class="container mt-3 mb-3 bg-light ">
+        <div class="container border border-3 rounded mx-auto">
+            <form class="m-4" action="/booking/search-room" method="get">
+                <div class="mb-2 ">
+                    <label for="location" class="form-label title-color"><i class="fa-solid fa-city"
+                            style="color: #63E6BE;"></i>
+                        Tên Phòng: </label>
+                    <input id="location" type="text" class="form-control dropdown-toggle"
+                        placeholder="Tên Phòng" aria-expanded="false" name="name-room" />
+                </div>
+
+                <!-- ngày nhận - ngày trả phòng -->
+                <div class="row justify-content-center align-items-center text-center">
+                    <div class="col-md-3 ">
+                        <label for="checkin-date" class="form-label title-color"><i class="fa-solid fa-calendar"
+                                style="color: #23e7d9;"></i> Check-in date:
+                        </label>
+                        <input type="date" id="checkin-date" class="form-control" name="date-in" />
+                    </div>
+
+                    <div class="col-md-3">
+                        <label class="mb-2 title-color"><i class="fa-solid fa-moon "
+                                style="color: #FFD43B;"></i> Số đêm</label>
+                        <select class=" form-select" id="overnight" name="overnight">
+                            {% for i in range(1, 5) %}
+                            <option value="{{ i }}">{{ i }} đêm</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label for="check-out-date" class="mb-3 title-color">
+                            <i class="fa-solid fa-right-to-bracket" style="color: #B197FC;"></i> Check out
+                        </label>
+                        <div>
+                            <label for="checkout-date" id="current-date"></label>
+                        </div>
+                    </div>
+
+                    <div class="row mt-3 justify-content-center p-0">
+                        <div class="col-md-3 text-center">
+                            <p class="title-color"> <i class="fa-solid fa-person" style="color: #f5600f;"></i>
+                                Số lượng khách</p>
+                            <select class="form-select" id="number-customer" name="number-customer">
+                                <option value="2">2</option>
+                                <option value="1">1</option>
+                                <option value="3">3</option>
+                            </select>
+                        </div>
+
+                        <div class="col-md-3 ">
+                            <p class="title-color"> <i class="fa-solid fa-bed" style="color: #e665d5;"></i> Loại
+                                phòng</p>
+                            <select class="form-select" id="type-room" name="type-room">
+                                <option value="Normal">
+                                    Normal</option>
+                                <option value="VIP">VIP
+                                </option>
+                            </select>
+                        </div>
+
+                        <div class="col-md-6 text-center">
+                            <p class="mb-0"><br></p>
+                            <button type="button" id="search" class="btn col-md-6"
+                                style="background-color:#ff5e1e; color:antiquewhite">
+                                <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i>
+                                Tìm phòng
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 <!-- Phần khuyến mãi -->
 <div class="container mt-5">
     <h3 class="mt3 mb-3">Mã giảm giá <span id="count-ticket"
@@ -422,7 +499,7 @@
 <!--end giới thiệu người sáng lập -->
 
 <!-- gửi thông tin khuyến mãi -->
-<div class=" container mt-5">
+<div class=" container mt-5 mb-5">
     <div class="row promotion">
         <div class="col-md-7">
             <div class="mt-3">
@@ -462,5 +539,4 @@
         </div>
     </div>
 </div>
-<br><br>
 {% endblock %}
