--- a/app/templates/reservation.html
+++ b/app/templates/reservation.html
@@ -1,11 +1,11 @@
 {% extends 'layout/base.html' %}
 
 {% block title %}Trang thông tin phiếu đặt{% endblock %}
-
-{% block js %}
-{% endblock %}
 {% block css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/reservation.css') }}" />
+{% endblock %}
+{% block js %}
+<script src="{{ url_for('static', filename='js/reservation.js') }}"></script>
 {% endblock %}
 
 {% block content %}
@@ -31,17 +31,34 @@
                         <span> - </span>
                         <span class="date">{{ b[6] }}</span>
                     </div>
+                    {% if b[10] == 0 %}
                     <div>
-                        <span class="success">Đã đặt thành công</span>
+                        <span id="booking-detail{{ b[9] }}" class="success">Đã đặt thành công</span>
                     </div>
+                    {% else %}
+                    <div>
+                        <span id="booking-detail{{ b[9] }}" class="danger">Đã hủy đặt phòng</span>
+                    </div>
+                    {% endif %}
                     <div>
                         <span class="my-date">{{ b[3] }}</span>
                     </div>
                 </div>
-                <div class="item-2">
-                    <h3 class="text-danger">{{ '{:,.0f}'.format(b[8]) }} VND</h3>
-                    <p>Mã đặt phòng: <span>{{ b[7] }}</span></p>
-                    <p>Mã phòng: <span>{{ b[0] }}</span></p>
+                <div class="item-2 d-flex flex-column   ">
+                    <div>
+                        <h3 class="text-danger">{{ '{:,.0f}'.format(b[8]) }} VND</h3>
+                    </div>
+                    <div>
+                        <p class="m-0">Mã đặt phòng: <span>{{ b[7] }}</span></p>
+                    </div>
+                    <div>
+                        <p class="m-0">Mã phòng: <span>{{ b[0] }}</span></p>
+                    </div>
+                    {% if b[10] == 0 %}
+                    <div>
+                        <input type="button" onclick="deleteBookingDetail('{{ b[9] }}')" value="Hủy đặt phòng" class="btn btn-danger mt-2"/>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -49,16 +66,4 @@
     {% endfor %}
 </div>
 
-<script>
-    window.onload = function (){
-        let date = document.getElementsByClassName('date')
-        for (let i = 0; i < date.length; i++){
-            date[i].innerText = moment(date[i].innerText).format('DD/MM/YYYY');
-        }
-        let myDate = document.getElementsByClassName('my-date')
-        for (let i = 0; i < myDate.length; i++){
-            myDate[i].innerText = moment(myDate[i].innerText).locale('vi').fromNow()
-        }
-    }
-</script>
 {% endblock %}
